sample/error/e01215-ai.asn
First DEFINITIONS ::=
BEGIN
    a INTEGER ::= 100
END

E01215-AI DEFINITIONS ::=
BEGIN
IMPORTS
    a, a            -- E01215-AI
    FROM First;
END

